# IAM-2.0

./: .copilot-instructions.md  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PHASE_COMPLETE_KETCHER_INTEGRATION.md  README.md  chem-env.yaml  debug_run.py  docker-compose.dev.yml  docker-compose.yml  integration_test_final.py  pyproject.toml  pytest.ini  requirements.txt  test_ui_integration.py
.github/workflows/: ci.yml
IAM_GUI/templates/: iam_viewer_connected.html
IAM_Knowledge/: 20250816_015650_test.json  benchmark_auto.csv
IAM_Knowledge/Results/: 20250815_174622_cj.json  20250815_190105_convert.json  20250815_190218_ketcher_run.json  20250815_190219_empirical.json  20250815_190632_convert.json  20250815_190633_empirical.json  20250815_191259_ketcher_run.json  20250816_032258_test_operation.json  benchmark_auto.csv
REPORTS/: IAM2_min_stack.md
api/: cj_routes.py  empirical_routes.py  psi4_routes.py
backend/: __init__.py  main.py
backend/api/: __init__.py  calc.py  convert.py  (+6 more)
docs/: API.md  IAM2.0_COMPLETE_DIRECTORY_TREE.md  IAM2.0_POST_REFACTOR_ANALYSIS.md  IAM_2.0_Whitepaper.md  IAM_Master_Technical_Report_FINAL.md  MIGRATION.md  QUICK_CONTINUATION_GUIDE.md  README.md  SESSION_SUMMARY_20250816.md  plan détaillé IAM2.0
examples/: README.md
frontend/: standalone_test.html
openapi/: iam2.v1.json  iam2.v1.yaml
public/: ketcher.html
scripts/: fetch_ketcher.sh  run_backend.sh  run_tests.sh  validate_openapi.py  verify_env.py
tests/: conftest.py  test_empirical_predictor.py  test_smoke.py
(+105 files in other folders)
