[project]
name = "iam2"
version = "2.0.0a0"
description = "IAM 2.0 – Intelligent Agent for Molecules (clean, modular rebuild)"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name="Louis-Philippe Poulin"}]

[project.optional-dependencies]
dev = ["ruff", "mypy", "pytest", "httpx", "pydantic>=2,<3"]

[tool.ruff]
line-length = 100
